# libusb

./: configure.ac
Xcode/: config.h
Xcode/libusb.xcodeproj/: project.pbxproj
android/: config.h
examples/: Makefile.am
libusb/: Makefile.am  core.c  hotplug.c  io.c  libusb.h  libusbi.h
libusb/os/: events_posix.c  events_posix.h  events_windows.c  events_windows.h  haiku_usb_raw.cpp  linux_netlink.c  linux_udev.c  linux_usbfs.c  poll_windows.h  wince_usb.c  wince_usb.h  windows_common.h  windows_nt_common.c  windows_nt_common.h  windows_shared_types.h  windows_usb.c  windows_usb.h  windows_usbdk.c  windows_usbdk.h  windows_winusb.c  windows_winusb.h
msvc/: libusb_dll_2005.vcproj  libusb_dll_2010.vcxproj  libusb_dll_2010.vcxproj.filters  libusb_dll_2012.vcxproj  libusb_dll_2013.vcxproj  libusb_dll_2015.vcxproj  libusb_dll_2017.vcxproj  libusb_dll_wince.vcproj  libusb_static_2005.vcproj  libusb_static_2010.vcxproj  libusb_static_2010.vcxproj.filters  libusb_static_2012.vcxproj  libusb_static_2013.vcxproj  libusb_static_2015.vcxproj  libusb_static_2017.vcxproj  libusb_static_wince.vcproj
